{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "GameEditor",
            "id": "639f846d-0237-4dc8-8010-971f8ff83ddc",
            "actions": [
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "77ef7976-001c-4b3b-a519-d7d8f4039b53",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "9ebd324b-11d7-482d-9c4c-e7227e2e05c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "b1e9cb66-50d7-4c4f-9ca8-093e7ebb046b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MButtonClick",
                    "type": "Button",
                    "id": "3acee537-5f8a-47d8-a45c-741c524af93c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UndoClick",
                    "type": "Button",
                    "id": "62f7d64e-7d03-492b-a95d-e4c500459af8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RedoClick",
                    "type": "Button",
                    "id": "dbf4df0f-a6ce-4755-80ab-b7c44f8fb2e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FButtonClick",
                    "type": "Button",
                    "id": "4de43f75-212e-4cd8-b341-cc79de94c5fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5c58b68b-6f7b-4050-8309-f5e8193c48c1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cadeaf6a-6ebf-4cde-a567-773abd5e7770",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9154664b-6256-4519-82b0-e010ccf2288e",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0f103a0-1624-4dff-8260-9e8d484a9aa4",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MButtonClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a131bda-4b2c-48c4-a2f0-d71d802e2cae",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UndoClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f5b55730-fcd5-4cfd-b444-2b9ed4df1644",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RedoClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf4bb52e-2a30-4e45-b975-aec03d6d0469",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FButtonClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GamePlay",
            "id": "c6b8229e-89b6-4ba4-b60c-f220ed59e327",
            "actions": [
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "6481997d-76ba-45d9-afba-d1a6bf96220b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "4f364bc6-5a3a-4821-a340-841b19c2e6d8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "f06a2d92-05ff-4750-9482-b3a560b123bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "6095e670-aa52-48be-8808-570a1ccbf4a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "5ac5a13f-1908-4304-8862-056492fee346",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "114f1763-3be5-4942-9803-c77316515f39",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "633047da-14d0-49d2-89a1-283b969ad285",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e567f69f-2682-4623-836a-cc950b51a1c3",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea3b9db8-80e4-45ab-acf7-ff98852c0936",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff8d05e2-5953-4f47-a808-8615f80f1087",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}